--- a/app/src/main/res/drawable/draggableico.xml
+++ b/app/src/main/res/drawable/draggableico.xml
@@ -1,17 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="140dp"
-    android:height="41dp"
-    android:viewportWidth="140"
-    android:viewportHeight="41">
+    android:width="124dp"
+    android:height="62dp"
+    android:viewportWidth="124"
+    android:viewportHeight="62">
   <path
-      android:pathData="M135,31a5,5 0,1 0,0 10,5 5,0 0,0 0,-10ZM5,31a5,5 0,1 0,0 10,5 5,0 0,0 0,-10ZM121.5,29.06c-39.95,-10.68 -63.05,-10.81 -103.01,0A2.01,2.01 0,0 0,17 30.99v7.47c0,1.3 1.22,2.24 2.48,1.95 39.02,-9.23 62,-9.37 101.03,-0.02 1.26,0.3 2.49,-0.64 2.49,-1.94v-7.46c0,-0.9 -0.62,-1.7 -1.5,-1.93ZM71.23,0.88a2,2 0,0 0,-2.37 -0.02L52.24,12.8c-1.74,1.24 -0.57,3.97 1.52,3.59l15.38,-2.82a2,2 0,0 1,0.72 0l15.79,2.9c2.08,0.38 3.25,-2.3 1.56,-3.57L71.22,0.88Z">
+      android:pathData="M116.24,45.39C74.02,28.97 49.98,28.77 7.75,45.39C7.28,45.58 6.88,45.95 6.66,46.42L0.98,58.71C0.24,60.32 1.8,62.04 3.47,61.49C43.24,48.47 80.73,48.27 120.5,61.46C122.18,62.01 123.75,60.29 123,58.69L117.34,46.42C117.12,45.95 116.72,45.58 116.24,45.39ZM63.25,1C62.52,0.42 61.48,0.42 60.75,1L43.42,14.87C41.78,16.17 43.01,18.8 45.06,18.39L61.61,15.08C61.87,15.03 62.13,15.03 62.39,15.08L78.94,18.39C80.99,18.8 82.22,16.17 80.58,14.87L63.25,1Z">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startX="121.5"
-          android:startY="57.34"
-          android:endX="37.48"
-          android:endY="-43.67"
+          android:startX="107.28"
+          android:startY="60.95"
+          android:endX="-6.71"
+          android:endY="-26.24"
           android:type="linear">
         <item android:offset="0" android:color="#FF5C40FF"/>
         <item android:offset="1" android:color="#FFEAF0FF"/>
